--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             background-size: cover;
             font-family: Arial, sans-serif;
         }
-        .header {
+        
+        .header {                                
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -171,7 +172,8 @@
         </div>
     </div>
     <script>
-        function submitForm() {
+        //myform
+        function submitForm() {   
             const form = document.getElementById('registrationForm');
             const confirmationMessage = document.getElementById('confirmationMessage');
             if (form.checkValidity()) {
